Updated Datapack to Java 21